welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.code
def marquer()
{
	baisseBrosse()
	leveBrosse()
}
def Fleur(c:Color)
{
	setCouleurBrosse(c)
	marquer()
	avance(2)
	marquer
	recule()
	gauche()
	avance()
	marquer()
	recule(2)
	marquer()
	avance()
	setCouleurBrosse(Color.YELLOW)
	marquer()
	droite()
	reculer()
}

def growFlowers()
{
	Fleur(Color.RED)
	avance(4)
	Fleur(Color.CYAN)
	recule(2)
	droite()
	avance(2)
	gauche()
	Fleur(Color.ORANGE)
	avance(2)
	droite()
	avance(2)
	gauche()
	Fleur(Color.GREEN)
	recule(4)
	Fleur(Color.PINK)
}
